# docs/openapi/openapi.json
@@ -6341,6 +6341,51 @@
         }
       }
     },
+    "/api/v1/timeline-revisions/{timeline_revision_id}:export": {
+      "post": {
+        "tags": [
+          "timeline",
+          "delivery"
+        ],
+        "summary": "Export Timeline Revision",
+        "operationId": "exportTimelineRevision",
+        "parameters": [
+          {
+            "name": "timeline_revision_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Timeline Revision Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true,
+                  "title": "Response Exporttimelinerevision"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/episodes/{episode_id}/subtitle-revisions": {
       "post": {
         "tags": [
